<resources>
    <string name="app_name">IntaiHere</string>
    <string name="google_maps_api">AIzaSyCozKfs4eUU9XKwYdw3ieUoAAMc_EkOKvg</string>
    <string name="permission_dialog">Accessing Location Permissions required</string>
    <string name="go_to_permissions_settings">Go to App settings and enable permissions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tv_ket_tentang">IntaiHere adalah sebuah aplikasi pendeteksi antara pengguna satu dengan lainya yang berbasis android. Aplikasi ini memanfaatkan fitur yang terdapat pada smartphone yaitu GPS (Global Positioning System) untuk request koordinat latitude dan longitude yang kemudian dikirimkan oleh server disimpan ke database. Data lokasi yang sudah disimpan kemudian dikirim server dan ditampilkan pada Google maps</string>
    <string name="tentang1">Aplikasi ini juga terdapat fasilitas direction atau rute yang dituju, selain itu juga terdapat fitur telepon dan kirim pesan sms</string>
    <string name="tv_ket_infoApp">© 2017-2018 PT. Integravity Biru Jasalia All rights reserved</string>
    <string name="developer">Abdul Malik Zain Syahputro</string>
    <string name="versi">Versi 3.0</string>

</resources>
