<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:minWidth="1000dp"
    android:minHeight="1000dp"
    android:background="@color/colorBlack">

    <TextView
        android:layout_marginTop="120dp"
        android:layout_width="90dp"
        android:layout_height="16dp"
        android:layout_gravity="center"
        android:background="@drawable/logobar"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/versi"
        android:textColor="#9db3ac"/>

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/logosplash"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/tv_ket_infoApp"
        android:textColor="#9db3ac"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Developer by"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_gravity="center"
        android:textColor="@color/colorWhite"
        android:text="@string/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>